--- a/style.css
+++ b/style.css
@@ -65,13 +65,13 @@ input,button{
 
 }
 
-.loggedin-div #btn3 {
+.loggedin-div button {
     background: #5d8ffc;
     color: #fff;
     border: 1px solid #5d8ffc;
     border-radius: 5px;
     padding: 15px;
-    display: inline-block;
+    display: block;
     width: 50%;
     float: left;
     transition: 0.3s;
@@ -93,7 +93,7 @@ input,button{
     cursor: pointer;
 }
 
-.loggedin-div #btn3:hover{
+.loggedin-div button:hover{
     background: #fff;
     color: #5d8ffc;
     border: 1px solid #5d8ffc;
